--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
   <meta charset="UTF-8">
   <title>Spēle</title>
   <link rel="stylesheet" href="css/styles.css">
-  <script type="text/javascript" charset="UTF-8" src="js/main.js"></script>
+  <script type="text/javascript" charset="UTF-8" src="js/main.js">
+  window.onload = () => {
+    let k = new Karatavas("konteiners");
+  }
+  </script>
+
 </head>
 <body>
+  <h1>Karātavas</h1>
   <div id="konteiners"></div>
 </body>
 </html>
